[gd_scene load_steps=6 format=3 uid="uid://csduolpu4m10g"]

[ext_resource type="Script" uid="uid://den7pjp7aagei" path="res://Scenes/Game/Main.gd" id="1_r8xbm"]
[ext_resource type="Texture2D" uid="uid://bbn4wun0ue4nn" path="res://TestScripts/ogsarÄ±bugatti.jpg" id="2_c6dyv"]
[ext_resource type="PackedScene" uid="uid://n7b1ctt4m4o2" path="res://Scenes/Paddle/Paddle.tscn" id="3_cyew3"]
[ext_resource type="AudioStream" uid="uid://c0dmm16b5av4u" path="res://assets/bgm_action_5.mp3" id="4_y4a8c"]
[ext_resource type="AudioStream" uid="uid://b4fcdckc1sknx" path="res://assets/spell1_0.wav" id="5_c6dyv"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_r8xbm")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576.5, 326.5)
scale = Vector2(0.849927, 0.855469)
texture = ExtResource("2_c6dyv")

[node name="Paddle" parent="." instance=ExtResource("3_cyew3")]
position = Vector2(569.325, 576)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_y4a8c")
volume_db = -15.0
autoplay = true

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_c6dyv")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 25.0
offset_top = 26.0
offset_right = 65.0
offset_bottom = 49.0
theme_override_font_sizes/font_size = 48
text = "000"

[connection signal="area_entered" from="Paddle" to="." method="_on_paddle_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
